# ZephyrRTOS-FW

./: README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  prj.conf
app/src/: main.c
app/src/ble/: bas_service.c  bas_service.h  fhr_service.c  fhr_service.h
app/src/sim/: battery_sim.c  battery_sim.h  fhr_sim.c  fhr_sim.h
app/src/tasks/: battery_task.c  battery_task.h  fhr_task.c  fhr_task.h
tests/src/: test_battery.c  test_fhr.c
